syntax = "proto3";

option csharp_namespace = "UserManagement.Grpc.Schema";

import "google/protobuf/Duration.proto";

package user_management;

message User {
  string name = 1;
  int32 age = 2;
  optional string address = 3;
  double score = 4;
  google.protobuf.Duration personal_best = 5;
}
